# SCPs

./: CMakeLists.txt  README.md  settings.code-workspace
C++/include/: scp_solver.hpp
C++/src/: scp_solver.cpp  scp_solver_main.cpp
Python/: Greedy.py  SCP.ipynb
docs/: .~lock.SCP410.ods#  Readme.md  SCP.md  SCP41.xlsx  SCP410.ods
include/: scp_solver.hpp
input/: README.md  SCP41.ods  data.config  scp410.txt
src/: main.cpp  scp.cpp  scp_solver.cpp  scp_solver_main.cpp  server.cpp
