cmake_minimum_required(VERSION 3.9)
project(SCPs)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
set(HEADERS include/Hello.hpp)
add_executable(test src/main.cpp src/hello ${HEADERS})

find_package(cpprestsdk REQUIRED)
add_executable(server src/server.cpp)
target_link_libraries(server PRIVATE cpprestsdk::cpprest)