cmake_minimum_required(VERSION 3.9)
project(SCPs)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
set(HEADERS include/Hello.hpp)
add_executable(test src/main.cpp src/hello ${HEADERS})

add_library(scp_solver_lib src/scp_solver)
add_executable(scp_solver_exe src/scp_solver_main.cpp)
target_link_libraries(scp_solver_exe PRIVATE scp_solver_lib)